Start porting to Java 11